<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_marginTop="16dp"
    tools:context="com.anisanurjanah.fahrameducation.course.detail.DetailCourseActivity"
    tools:showIn="@layout/activity_detail_course">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/published_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/course"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/course"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/teacher_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/published_at" />

        <ImageView
            android:id="@+id/teacher_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_title"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/teacher"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/teacher_image"
            app:layout_constraintTop_toTopOf="@+id/teacher_image" />

        <TextView
            android:id="@+id/teacherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/teacher"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/teacher_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_teacher" />

        <TextView
            android:id="@+id/tv_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/path"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_image" />

        <TextView
            android:id="@+id/course_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/course"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_path"
            app:layout_constraintTop_toBottomOf="@+id/teacher_image" />

        <TextView
            android:id="@+id/tv_slug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/slug"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_path" />

        <TextView
            android:id="@+id/course_slug"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/course"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_slug"
            app:layout_constraintTop_toBottomOf="@+id/course_path" />

        <TextView
            android:id="@+id/course_excerpt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/course"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_slug" />

        <ImageView
            android:id="@+id/view_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_excerpt"
            app:srcCompat="@drawable/ic_remove_red_eye"
            app:tint="?attr/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/view"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/view_image"
            app:layout_constraintStart_toEndOf="@+id/view_image"
            app:layout_constraintTop_toTopOf="@+id/view_image" />

        <ImageView
            android:id="@+id/level_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/course_excerpt"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/course_excerpt"
            app:layout_constraintTop_toBottomOf="@+id/course_excerpt"
            app:srcCompat="@drawable/ic_menu_book"
            app:tint="?attr/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/level"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/level_image"
            app:layout_constraintStart_toEndOf="@+id/level_image"
            app:layout_constraintTop_toTopOf="@+id/level_image" />

        <ImageView
            android:id="@+id/module_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_module"
            app:layout_constraintTop_toBottomOf="@+id/course_excerpt"
            app:srcCompat="@drawable/ic_library_books"
            app:tint="?attr/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_module"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/module"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/module_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/module_image" />

        <TextView
            android:id="@+id/course_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/course"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_view"
            app:layout_constraintStart_toStartOf="@+id/view_image"
            app:layout_constraintTop_toBottomOf="@+id/view_image" />

        <TextView
            android:id="@+id/course_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/course"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@+id/tv_level"
            app:layout_constraintStart_toStartOf="@+id/level_image"
            app:layout_constraintTop_toBottomOf="@+id/level_image" />

        <TextView
            android:id="@+id/course_module"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/course"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@+id/tv_module"
            app:layout_constraintStart_toStartOf="@+id/module_image"
            app:layout_constraintTop_toBottomOf="@+id/module_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>